crates/snapshot-tests/tests/snapshots/parser__bad_inline_tables__only_comma.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[Wanted]: expected a table key, found a comma at `a`
  ┌─ only_comma:1:6
  │
1 │ a = {,}
  │      ^ expected a table key


error: expected a table key, found a comma at `a`
 --> only_comma:1:6
  |
1 | a = {,}
  |      ^ expected a table key
Error {
    kind: "Wanted",
    message: "expected a table key, found a comma",
    span: 5..6,
    path: Some(
        "a",
    ),
}
